--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.8.3",
     "@stripe/stripe-js": "^5.6.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.4",
     "debounce": "^2.2.0",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.475.0",
