--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@stripe/stripe-js": "^5.6.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -11,6 +12,7 @@
     "autoprefixer": "^10.4.20",
     "debounce": "^2.2.0",
     "framer-motion": "^12.6.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
