--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@paypal/react-paypal-js": "^8.8.3",
     "@react-oauth/google": "^0.12.1",
     "@stripe/stripe-js": "^5.6.0",
@@ -16,6 +17,7 @@
     "currency-codes": "^2.2.0",
     "currency-symbol-map": "^5.1.0",
     "debounce": "^2.2.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.6.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
